fixed a bug on the contact me page now on mobile you can tap on the card

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -28,6 +28,7 @@
 .contact__option-icon {
     font-size: 1.5rem;
     margin-bottom: .5rem;
+    color: white;
 
 }
 
